--- a/q2/q2/css/style.css
+++ b/q2/q2/css/style.css
@@ -1,2 +1,19 @@
 @charset "UTF-8";
 /* 回答はここから */
+
+.list {
+  display: flex;
+  justify-content: center;
+  
+}
+
+.list--card {
+  list-style: none;
+  outline: 10px solid #655;
+  margin: 30px;
+  box-shadow: 0 0 0 6px #655;
+  background: #d2b48c;
+  padding: 10px;
+  width: 200px;
+  border-radius: 13px;
+}
