--- a/q4/q4/css/style.css
+++ b/q4/q4/css/style.css
@@ -1,1 +1,51 @@
 @charset "UTF-8";
+
+.main--area .sub--box:first-child {
+  margin-top: 0;
+}
+
+.sub--box {
+  display: table;
+  width: 100%;
+  margin-top: 50px;
+}
+
+.common--box {
+  display: table-cell;
+  text-align: center;
+  padding: 20px;
+}
+
+
+
+.red--box {
+  background-color: #ff7b7b;
+  width: 300px;
+}
+
+.purple--box {
+  background-color: #7b86ff;
+}
+
+.yellow--box {
+  background-color: #fff27b;
+  width: 300px;
+}
+
+.green--box {
+  background-color: #7bff91;
+}
+
+.pink--box {
+  background-color: #ff7be2;
+  width: 400px;
+}
+
+.orange--box {
+  background-color: #ffc67b;
+  width: 400px;
+}
+
+.blue--box {
+  background-color: #7bf2ff;
+}
