--- a/q5/q5/css/style.css
+++ b/q5/q5/css/style.css
@@ -1,1 +1,10 @@
 @charset "UTF-8";
+.item--box {
+  width: 65px;
+  margin: 10px;
+  padding: 10px;
+  text-align: center;
+  background: #00bbdd;
+  color: #fff;
+}
+
