--- a/q5/q5/css/style.css
+++ b/q5/q5/css/style.css
@@ -7,4 +7,103 @@
   background: #00bbdd;
   color: #fff;
 }
+/* Q5-1 */
+.flex {
+  display: flex;
+  flex-direction: row;
+}
+.flex--reverse {
+  display: flex;
+  flex-direction: row-reverse;
+}
+.flex--column {
+  display: flex;
+  flex-direction: column;
+}
+.flex--column--reverse {
+  display: flex;
+  flex-direction: column-reverse;
+}
 
+/* Q5-2 */
+.flex--nowrap {
+  display: flex;
+  flex-wrap: nowrap;
+}
+.flex--wrap {
+  display: flex;
+  flex-wrap: wrap;
+}
+.flex--wrap--reverse {
+  display: flex;
+  flex-wrap: wrap-reverse
+}
+
+/* Q5-3 */
+.flex--left {
+  display: flex;
+  justify-content: flex-start;
+}
+.flex--right {
+  display: flex;
+  justify-content: flex-end;
+}
+.flex--center {
+  display: flex;
+  justify-content: center;
+}
+.flex--between {
+  display: flex;
+  justify-content: space-between;
+}
+.flex--around {
+  display: flex;
+  justify-content: space-around;
+}
+
+/* Q5-4 */
+.grid--box {
+  padding: 10px;
+  background: #00bbdd;
+  color: #fff;
+}
+
+.grid--columns {
+  display: grid;
+  grid-template-columns: 200px 200px 200px;
+  gap: 10px;
+}
+.grid--fr {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 10px;
+  margin-top: 20px;
+}
+.grid--rows {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 10px;
+  grid-template-rows: 200px 200px;
+  margin-top: 20px;
+}
+
+.red--box {
+  grid-column: 1 / 3;
+  background: #dd0700;
+}
+.green--box {
+  grid-row: 2 / 4;
+  background: #0bdd00;
+}
+.yellow--box {
+  grid-column: 2 / 4;
+  background: #d9dd00;
+}
+
+.grid--wrapper {
+  display: grid;
+  grid-template-columns: 100px 100px 100px;
+  grid-template-rows: 100px 100px 100px;
+  gap: 10px;
+  margin-top: 20px;
+}
